Fixed issue where the filter boarder become shorter if the filtering left 2 or less venue cards visible

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ ul {
     position: fixed;
     width: 100%;
     height: 78px;
+    z-index: 1;
 }
 
 li {
@@ -99,9 +100,12 @@ li a {
 .filter-section {
     border-right: 1px solid black;
     padding-top: 214px;
-    padding-left: 100px;
+    padding-left: 50px;
     padding-right: 100px;
+    max-width: 300px;
     width: 407px;
+    min-height: 100%;
+    position: fixed;
 }
 
 #filter-heading {
@@ -109,9 +113,9 @@ li a {
     font-size: 25px;
     font-style: normal;
     font-weight: 500;
-    /* padding-right: 50px;  */
     display: inline-block;
     width: 156px;
+    margin-bottom: 30px;
 }
 
 .filter-subheading {
@@ -119,8 +123,13 @@ li a {
     font-size: 17px;
     font-style: normal;
     font-weight: 400;
-    padding-bottom: 30px;
+    margin-bottom: 5px;
 }
+
+#wedding-date-picker {
+    margin-bottom: 25px;
+}
+
 
 .catering-grade-label {
     font-family: 'Helvetica', 'Arial';
@@ -128,6 +137,8 @@ li a {
     font-style: normal;
     font-weight: 400;
 }
+
+
 
 /* PAGE TITLES */
 .title {
@@ -138,6 +149,11 @@ li a {
 }
 
 #title-browse {
+    padding-top: 120px;
+    padding-left: 400px;
+}
+
+#title-single  {
     padding-top: 145px;
     padding-left: 525px;
 }
@@ -148,7 +164,7 @@ li a {
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 30px;
-    padding-left: 120px;
+    padding-left: 400px;
 }
 
 .venue-card {
